--- a/shop/config/ooor.yml
+++ b/shop/config/ooor.yml
@@ -1,7 +1,6 @@
 development:
-  #url: http://128321-9-0-052da3.runbot9.odoo.com         #the OpenERP XML/RPC server
-  #database: 128321-9-0-052da3-all               #the OpenERP database you want to connect to
-  url: http://odoo:8069
+  # use voodoo inspect on your odoo project to get the hostname
+  url: http://akreshop_odoo_run_1:8069
   database: db
   username: admin
   password: admin
@@ -15,7 +14,7 @@ development:
   param_keys:
     product.template: name
   proxies:
-    "/web/image": http://odoo:8069/web/image
-    "/web/content": http://odoo:8069/web/content
-    "/shop/cart": http://odoo:8069/shop/cart
+    "/web/image": http://akreshop_odoo_run_1:8069/web/image
+    "/web/content": http://akreshop_odoo_run_1:8069/web/content
+    "/shop/cart": http://akreshop_odoo_run_1:8069/shop/cart
 
